Added Applied  all styles to test.html and adjusted colors to give more contrast

--- a/test.html
+++ b/test.html
@@ -4,18 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <title>The Daniels - Their Film and Me</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
+<div class="div">
 <body>
-    <header>
+    <header class="header">
         <h1>The Daniels - Their Film and Me</h1>
     </header>
-    <hr>
-    <nav>
+
+    <nav class="nav">
         <a href="index.html">Home</a> | <a href="faq.html">Frequently Asked Questions</a>
     </nav>
   
-    <ul>
+    <ul class="ul">
         <li><a href="#Daniels">The Daniels</a></li>
         <li><a href="#Movie">Their Movie</a></li>
         <li><a href="#Physics">Physics</a></li>
@@ -24,7 +26,7 @@
         <li><a href="#Me">Me</a></li>
     </ul>
     
-    <main>
+    <main class="main">
         <section id="Daniels">
             <h2>The Daniels</h2>
             <p>Filmmakers Daniel Kwan and Daniel Scheinert, collectively known as Daniels, met while studying at Emerson
@@ -101,8 +103,8 @@
         </section>
 
     </main>
-    <hr>
-    <footer>
+
+    <footer class="footer">
         <pre>
       <strong>News and Events</strong>
       <a href="https://www.theartnewspaper.com/">The Art Newspaper</a>
@@ -116,5 +118,6 @@
      </pre>
     </footer>
 </body>
+</div>
 
 </html>
