Colors, fonts-size, font-family were changed on style.css to make the colors accessible. Classes were added to the test.html.

--- a/test.html
+++ b/test.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<div class="div">
-<body>
+<body class="body"> <!--This is how to make the whole webpage black-->
     <header class="header">
+        <br>
         <h1>The Daniels - Their Film and Me</h1>
     </header>
 
@@ -92,7 +92,7 @@
         <section id="Me">
             <h2>Me</h2>
             <p>This class is answering questions of mine about:
-            <ul>
+            <ul class="ul">
                 <li>How to best arrange things on a web page in aesthetically pleasing manner</li>
                 <li>The requirements for building an accessible web page</li>
                 <li>Finding and understanding the code of web pages</li>
@@ -105,19 +105,18 @@
     </main>
 
     <footer class="footer">
-        <pre>
-      <strong>News and Events</strong>
-      <a href="https://www.theartnewspaper.com/">The Art Newspaper</a>
+<pre class="pre">
+<strong>News and Events</strong>
+<a href="https://www.theartnewspaper.com/">The Art Newspaper</a>
 
-      <strong>Webmaster for The Daniels - Their Film and Me Site</strong>
-      <a href="mailto:cican42814@gmail.com">Email Webmaster</a>
+<strong>Webmaster for The Daniels - Their Film and Me Site</strong>
+<a href="mailto:cican42814@gmail.com">Email Webmaster</a>
 
-      <strong>Physical Address</strong>
-      123 Do-ray-me Rd.
-      Piccadilly, NY 01234
-     </pre>
+<strong>Physical Address</strong>
+123 Do-ray-me Rd.
+Piccadilly, NY 01234
+</pre>
     </footer>
 </body>
-</div>
 
 </html>
