Copied test.html into indext.html, then added classes to each element. Changed color: orange to color: #ffaa87 on table.css and style.css. test.html was deleted

--- a/faq.html
+++ b/faq.html
@@ -5,18 +5,21 @@
     <meta charset="UTF-8">
     <title>The Daniels - Their Film and Me</title>
     <link rel="stylesheet" href="css/table.css">
+    <link rel="stylesheet" href="css/style.css">
+
   </head>
 
-  <body>
-    <header>
+  <body class="body">
+    <header class="header">
+      <br>
       <h1>The Daniels - Their Film and Me</h1>
     </header>
-    <hr>
-    <nav>
+  
+    <nav class="nav">
       <a href="index.html">Home</a> | <a href="faq.html">Frequently Asked Questions</a>
     </nav>
 
-    <ul>
+    <ul class="ul">
       <li><a href="#FAQ">Frequently Asked Questions</a></li>
       <li><a href="#NewsEvents">News and Events</a></li>
     </ul>
@@ -114,9 +117,9 @@
       <p> Feel free to visit <a href="https://www.theartnewspaper.com/" target="_blank">The Art Newspaper</a> to keep up with international art news and events.</p>
       </section>
     </main>
-    <hr>
-    <footer>
-    <pre>
+  
+    <footer class="footer">
+    <pre class="pre">
     <strong>News and Events</strong>
     <a href="https://www.theartnewspaper.com/" target="_blank">The Art Newspaper</a>
 
