Corrected the code in table. This is correct <th headers="hdr_number" scope="row">2</th>. This is incorrect <th id="hdr_number" scope="row">.

--- a/faq.html
+++ b/faq.html
@@ -48,61 +48,61 @@
         </thead>
         <tbody>
           <tr>
-            <th id="hdr_number" scope="row">2</th>
+            <th headers="hdr_number" scope="row">2</th>
             <td headers="hdr_song"><q>Wang Family Portrait</q></td>
             <td headers="hdr_songwriter">Son Lux</td>
             <td headers="hdr_length">1:47</td>
           </tr>
           <tr>
-            <th id="hdr_number" scope="row">4</th>
+            <th headers="hdr_number" scope="row">4</th>
             <td headers="hdr_song"><q>Vvvery Busy</q></td>
             <td headers="hdr_songwriter">Son Lux</td>
             <td headers="hdr_length">2:05</td>
           </tr>
           <tr>
-            <th id="hdr_number" scope="row">8</th>
+            <th headers="hdr_number" scope="row">8</th>
             <td headers="hdr_song"><q>Nothing Could Possibly Matter More</q></td>
             <td headers="hdr_songwriter">Son Lux</td>
             <td headers="hdr_length">2:22</td>
           </tr>
           <tr>
-            <th id="hdr_number" scope="row">11</th>
+            <th headers="hdr_number" scope="row">11</th>
             <td headers="hdr_song"><q>The Fanny Pack</q></td>
             <td headers="hdr_songwriter">Son Lux</td>
             <td headers="hdr_length">1:49</td>
           </tr>
           <tr>
-            <th id="hdr_number" scope="row">12</th>
+            <th headers="hdr_number" scope="row">12</th>
             <td headers="hdr_song"><q>Jobu Tupaki</q></td>
             <td headers="hdr_songwriter">Son Lux</td>
             <td headers="hdr_length">2:03</td>
           </tr>
           <tr>
-            <th id="hdr_number" scope="row">17</th>
+            <th headers="hdr_number" scope="row">17</th>
             <td headers="hdr_song"><q>I Love You Kung Fu</q></td>
             <td headers="hdr_songwriter">Son Lux</td>
             <td headers="hdr_length">1:46</td>
           </tr>
           <tr>
-            <th id="hdr_number" scope="row">23</th>
+            <th headers="hdr_number" scope="row">23</th>
             <td headers="hdr_song"><q>You're Living Your Worst You</q></td>
             <td headers="hdr_songwriter">Son Lux</td>
             <td headers="hdr_length">2:27</td>
           </tr>
           <tr>
-            <th id="hdr_number" scope="row">30</th>
+            <th headers="hdr_number" scope="row">30</th>
             <td headers="hdr_song"><q>Pinky Fight</q></td>
             <td headers="hdr_songwriter">Son Lux</td>
             <td headers="hdr_length">1:14</td>
           </tr>
           <tr>
-            <th id="hdr_number" scope="row">44</th>
+            <th headers="hdr_number" scope="row">44</th>
             <td headers="hdr_song"><q>Specks of Time</q></td>
             <td headers="hdr_songwriter">Son Lux - Benjamin</td>
             <td headers="hdr_length">2:49</td>
           </tr>
           <tr>
-            <th id="hdr_number" scope="row">48</th>
+            <th headers="hdr_number" scope="row">48</th>
             <td headers="hdr_song"><q>Sucked Into a Bagel</q></td>
             <td headers="hdr_songwriter">Son Lux</td>
             <td headers="hdr_length">2:30</td>
