--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     </section>
     <section id="Art">
       <h4>Art</h4>
-      <p>Born in 1970 in Los Angeles, Kurata grew up in the San Gabriel Valley, the youngest of four children. Her parents owned a laundromat. She is Japanese American.</p>
+      <p>Born in 1970 in Los Angeles, Shirley Kurata grew up in the San Gabriel Valley, the youngest of four children. Her parents owned a laundromat. She is a Japanese-American wardrobe stylist and costume designer based in Los Angeles, California. In 2023, she was nominated for the Academy Award for Best Costume Design, for her work on the absurdist comedy-drama indie film Everything Everywhere
+      All at Once.
+</p>
       <p>For <q>Everything Everywhere All at Once</q>, Kurata designed multiple looks for actors including Michelle Yeoh, Ke Huy Quan,Stephanie Hsu, and Jamie Lee Curtis, as their characters traveled from the <q>main</q> universe to other parts of the multiverse. For the film, Kurata was tasked with designing an extremely large number of costumes on a limited budget. Kurata has said that co-directors Daniel Kwan and Daniel Scheinert encouraged her to <q>Just go crazy, get creative</q>, and that they aimed to create costumes that viewers would wear on Halloween.
       </p>
       <p>According to The Hollywood Reporter, Kurata <q>subverted and reclaimed Asian-centric tropes</q> in styling the <q>outrageously outfitted personas</q> of Hsu's character, villain Jobu Tupaki, to whom Kurata has said she relates. Jobu Tupaki's many looks in the film include <q>Golfer Jobu</q> who wears a pink argyle vest and socks, exemplifying <q>the perfect Asian daughter who excels at sports and everything else in her life</q> according to Kurata. <q>Elvis Jobu</q>, on the other hand, wearing an Elvis costume with pink hair and a cigarette, signals that she is antagonizing her mother. Another is <q>Goth Jobu</q>, who wears an <q>all-black and a vinyl A-line miniskirt over a sheer tulle petticoat</q>, which The Hollywood Reporter notes is <q>a twist on anime cosplay's Victorian doll-inspired Elegant Gothic Lolita.</q> Yet another look is <q>Jobu K-Pop Star</q>, influenced by K-pop and Harajuku street style.
