--- a/index.html
+++ b/index.html
@@ -28,36 +28,76 @@
   <main class="main">
     <section id="Daniels">
       <h2>The Daniels</h2>
+      <figure>
+        <a href="images/daniels_critics_choice-lg.png"><img src="images/daniels_critics_choice-thumb.png" alt="Daniel Kwan and Daniel Scheinert at the 2023 Annual Critics Choice Awards" target="_blank"></a>
+        <figcaption>Daniel Kwan, Daniel Scheinert in the press room at the 28th Annual Critics Choice Awards at Fairmont Century Plaza on
+        January 15, 2023 in Los Angeles, CA.</figcaption>    
+      </figure>
       <p>Filmmakers Daniel Kwan and Daniel Scheinert, collectively known as Daniels, met while studying at Emerson College in Boston and began collaborating on various projects. Their breakthrough came with their short film <q>Interesting Ball</q> (2008), which gained viral attention online. It showcased their quirky humor and distinctive visual style, setting the tone for their future work.</p>
       <p>Their unique approach to filmmaking has earned them a dedicated fanbase and critical acclaim within the industry, solidifying their reputation as innovative and boundary-pushing directors.</p>
     </section>
     <section id="Movie">
       <h3>Their Movie</h3>
+      <figure>
+        <a href="images/everything_where_once-lg.png"><img src="images/everything_where_once-thumb.png"
+            alt="Everything Everywhere All at Once on a movie screen in an empty movie theater"></a>
+        <figcaption>Everything Everywhere All at Once on a movie screen in an empty movie theater</figcaption>
+      </figure>
       <p>The movie, <q>Everything Everywhere All At Once</q>, was a spectacular display of physics, mathematics, and art. Sharing about this movie, is me sharing about subjects that interest me.</p>
     </section>
     <section id="Physics">
       <h3>Physics</h3>
+      <figure>
+        <a href="images/parallelunis-lg.jpg"><img src="images/parallelunis-thumb.jpg"
+            alt="Many spheres covered in different stars and galaxies"></a>
+        <figcaption>Many spheres covered in different stars and galaxies</figcaption>
+      </figure>
       <p>Physicists Max Tegmark and Brian Greene have proposed different classification schemes for multiverses and universes. Tegmark's four-level classification consists of Level I: an extension of our universe, Level II: universes with different physical constants, Level III: many-worlds interpretation of quantum mechanics, and Level IV: ultimate ensemble. Brian Greene's nine types of multiverses include quilted, inflationary, brane, cyclic, landscape, quantum, holographic, simulated, and ultimate. The ideas explore various dimensions of space, physical laws, and mathematical structures to explain the existence and interactions of multiple universes. Some other multiverse concepts include twin-world models, cyclic theories, M-theory, and black-hole cosmology.</p>
     </section>
     <section id="Mathematics">
       <h3>Mathematics</h3>
+      <figure>
+        <a href="images/math-lg.png"><img src="images/math-thumb.png"
+            alt="several mathematical equations"></a>
+        <figcaption>Everything Everywhere All at Once on a movie screen in an empty movie theater</figcaption>
+      </figure>
       <p>The subject of infinity and infinite universes, known as the multiverse, was presented in an intense yet whimsical way. Expressing the concept of infinity entertainment injects excitement into the subject matter, triggering in interest in a wider audience.</p>
       <p>The multi-step process for multiverse jumping (also known as verse jumping) introduces the concept of algorithms. Algorithms are used in solving problems in mathematics and logic.</p>
       <p>The use of charts in quantifying levels of skill for each version of a character involves presenting numbers in a graphical way.</p>
     </section>
     <section id="Art">
       <h3>Art</h3>
+      <figure>
+        <a href="images/shirley_kurata2-lg.png"><img src="images/shirley_kurata2-thumb.png"
+            alt="Shirley Kurata sitting in front of a laptop computer"></a>
+        <figcaption>Shirley Kurata sitting in front of a laptop computer</figcaption>
+      </figure>
       <p>Born in 1970 in Los Angeles, Shirley Kurata grew up in the San Gabriel Valley, the youngest of four children. Her parents owned a laundromat. She is a Japanese-American wardrobe stylist and costume designer based in Los Angeles, California. In 2023, she was nominated for the Academy Award for Best Costume Design, for her work on the absurdist comedy-drama indie film Everything Everywhere
       All at Once.
 </p>
       <p>For <q>Everything Everywhere All at Once</q>, Kurata designed multiple looks for actors including Michelle Yeoh, Ke Huy Quan,Stephanie Hsu, and Jamie Lee Curtis, as their characters traveled from the <q>main</q> universe to other parts of the multiverse. For the film, Kurata was tasked with designing an extremely large number of costumes on a limited budget. Kurata has said that co-directors Daniel Kwan and Daniel Scheinert encouraged her to <q>Just go crazy, get creative</q>, and that they aimed to create costumes that viewers would wear on Halloween.
       </p>
+      <figure>
+      <a href="images/jobu_topaki-lg.png"><img src="images/jobu_topaki-thumb.png"
+            alt="Jobu Topaki in blue outfit holding a bottle of organic kethchup"></a>
+      <figcaption>Jobu Topaki in blue outfit holding a bottle of organic kethchup</figcaption>
+      </figure>
       <p>According to The Hollywood Reporter, Kurata <q>subverted and reclaimed Asian-centric tropes</q> in styling the <q>outrageously outfitted personas</q> of Hsu's character, villain Jobu Tupaki, to whom Kurata has said she relates. Jobu Tupaki's many looks in the film include <q>Golfer Jobu</q> who wears a pink argyle vest and socks, exemplifying <q>the perfect Asian daughter who excels at sports and everything else in her life</q> according to Kurata. <q>Elvis Jobu</q>, on the other hand, wearing an Elvis costume with pink hair and a cigarette, signals that she is antagonizing her mother. Another is <q>Goth Jobu</q>, who wears an <q>all-black and a vinyl A-line miniskirt over a sheer tulle petticoat</q>, which The Hollywood Reporter notes is <q>a twist on anime cosplay's Victorian doll-inspired Elegant Gothic Lolita.</q> Yet another look is <q>Jobu K-Pop Star</q>, influenced by K-pop and Harajuku street style.
       </p>
+      <figure>
+        <a href="images/jobu_topaki2-lg.png"><img src="images/jobu_topaki2-thumb.png"
+            alt="Jobu Topaki wearing a colorful hoodie with teddy bears attached to shoulders"></a>
+        <figcaption>Jobu Topaki wearing a colorful hoodie with teddy bears attached to shoulders</figcaption>
+      </figure>
       <p>CBS News said the film's <q>gravitas</q> would not have been possible <q>without the creative vision behind the film's amazing (and often universe-defying) costumes - Shirley Kurata</q>. Insider observed that the film's costumes were <q>more than just clothes</q>, since they convey <q>different iterations of each character</q> and <q>[place] the viewer in the numerous multiverses traversed throughout the film.</q></p>
     </section>
     <section id="Me">
       <h2>Me</h2>
+      <figure>
+        <a href="images/robot_at_computer-lg.png"><img src="images/robot_at_computer-thumb.png"
+            alt="Robot typing on a laptop computer"></a>
+        <figcaption>Robot typing on a laptop computer</figcaption>
+      </figure>
       <p>This class is answering questions of mine about:
       <ul class="ul">
         <li>How to best arrange things on a web page in aesthetically pleasing manner</li>
