All images thumbnails were set to the same dimensions using CSS

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <h3>Their Movie</h3>
       <figure>
         <a href="images/everything_where_once-lg.png" target="_blank"><img src="images/everything_where_once-thumb.png"
-            alt="Everything Everywhere All at Once on a movie screen in an empty movie theater"></a>
-        <figcaption>Everything Everywhere All at Once on a movie screen in an empty movie theater</figcaption>
+            alt="Everything Everywhere All at Once title on a movie screen in an empty movie theater"></a>
+        <figcaption>Everything Everywhere All at Once - the movie</figcaption>
       </figure>
       <p>The movie, <q>Everything Everywhere All At Once</q>, was a spectacular display of physics, mathematics, and art. Sharing about this movie, is me sharing about subjects that interest me.</p>
     </section>
@@ -96,7 +96,7 @@
       <figure>
         <a href="images/robot_at_computer-lg.png" target="_blank" ><img src="images/robot_at_computer-thumb.png"
             alt="Robot typing on a laptop computer"></a>
-        <figcaption>A representation of me typing on laptop computer</figcaption>
+        <figcaption>A representation of me typing on a laptop computer</figcaption>
       </figure>
       <p>This class is answering questions of mine about:
       <ul class="ul">
