Favicon and Apple Touch icon created and added to index.html and faq.html site pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <title>The Daniels - Their Film and Me</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="apple-icon.png">
+
 </head>
 
 <body class="body"> <!--This is how to make the whole webpage black-->
