--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,8 @@
     <title>The Daniels - Their Film and Me</title>
     <link rel="stylesheet" href="css/table.css">
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="apple-icon.png">
   </head>
 
   <body class="body">
