Made slight change to figcaption for image of multiverse to make it different from the alternative text

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <figure>
         <a href="images/parallelunis-lg.jpg" target="_blank"><img src="images/parallelunis-thumb.jpg"
             alt="Many spheres covered in different stars and galaxies"></a>
-        <figcaption>Many spheres covered in different stars and galaxies</figcaption>
+        <figcaption>A representation of a multiverse</figcaption>
       </figure>
       <p>Physicists Max Tegmark and Brian Greene have proposed different classification schemes for multiverses and universes. Tegmark's four-level classification consists of Level I: an extension of our universe, Level II: universes with different physical constants, Level III: many-worlds interpretation of quantum mechanics, and Level IV: ultimate ensemble. Brian Greene's nine types of multiverses include quilted, inflationary, brane, cyclic, landscape, quantum, holographic, simulated, and ultimate. The ideas explore various dimensions of space, physical laws, and mathematical structures to explain the existence and interactions of multiple universes. Some other multiverse concepts include twin-world models, cyclic theories, M-theory, and black-hole cosmology.</p>
     </section>
