--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
     <section id="Daniels">
       <h2>The Daniels</h2>
       <figure>
-        <a href="images/daniels_critics_choice-lg.png" target="_blank"><img src="images/daniels_critics_choice-thumb.png" alt="Daniel Kwan and Daniel Scheinert at the 2023 Annual Critics Choice Awards"></a>
-        <figcaption>Daniel Kwan, Daniel Scheinert in the press room at the 28th Annual Critics Choice Awards at Fairmont Century Plaza on
-        January 15, 2023 in Los Angeles, CA.</figcaption>    
+        <a href="images/daniel_scheinert_and_daniel_kwan-lg.jpg" target="_blank"><img src="images/daniel_scheinert_and_daniel_kwan-thumb.jpg" alt="Interview with Daniel Scheinert and Daniel Kwan"></a>
+        <figcaption>CalTV E: Swiss Army Man Interview with Daniel Scheinert and Daniel Kwan</figcaption>    
       </figure>
       <p>Filmmakers Daniel Kwan and Daniel Scheinert, collectively known as Daniels, met while studying at Emerson College in Boston and began collaborating on various projects. Their breakthrough came with their short film <q>Interesting Ball</q> (2008), which gained viral attention online. It showcased their quirky humor and distinctive visual style, setting the tone for their future work.</p>
       <p>Their unique approach to filmmaking has earned them a dedicated fanbase and critical acclaim within the industry, solidifying their reputation as innovative and boundary-pushing directors.</p>
@@ -42,8 +41,8 @@
     <section id="Movie">
       <h3>Their Movie</h3>
       <figure>
-        <a href="images/everything_where_once-lg.png" target="_blank"><img src="images/everything_where_once-thumb.png"
-            alt="Everything Everywhere All at Once title on a movie screen in an empty movie theater"></a>
+        <a href="images/film-lg.jpg" target="_blank"><img src="images/film-thumb.jpg"
+            alt="Unrolled movie projector film"></a>
         <figcaption>Everything Everywhere All at Once - the movie</figcaption>
       </figure>
       <p>The movie, <q>Everything Everywhere All At Once</q>, was a spectacular display of physics, mathematics, and art. Sharing about this movie, is me sharing about subjects that interest me.</p>
@@ -73,7 +72,7 @@
       <figure>
         <a href="images/shirley_kurata2-lg.png" target="_blank" ><img src="images/shirley_kurata2-thumb.png"
             alt="Shirley Kurata in her creative environment"></a>
-        <figcaption>Shirley Kurata sitting in front of a laptop computer</figcaption>
+        <figcaption>Shirley Kurata sitting in front of a laptop computer - "Homeward Bound with Shirley Kurata", https://www.youtube.com/watch?v=8OCkK2tmndY</figcaption>
       </figure>
       <p>Born in 1970 in Los Angeles, Shirley Kurata grew up in the San Gabriel Valley, the youngest of four children. Her parents owned a laundromat. She is a Japanese-American wardrobe stylist and costume designer based in Los Angeles, California. In 2023, she was nominated for the Academy Award for Best Costume Design, for her work on the absurdist comedy-drama indie film Everything Everywhere
       All at Once.
@@ -83,14 +82,14 @@
       <figure>
       <a href="images/jobu_topaki-lg.png" target="_blank"><img src="images/jobu_topaki-thumb.png"
             alt="Jobu Topaki in blue outfit holding a bottle of organic kethchup"></a>
-      <figcaption>Jobu Topaki playfully wearing a furry jacket with silver gloves</figcaption>
+      <figcaption>Jobu Topaki playfully wearing a furry jacket with silver gloves - https://villains.fandom.com/wiki/Jobu_Tupaki/Gallery</figcaption>
       </figure>
       <p>According to The Hollywood Reporter, Kurata <q>subverted and reclaimed Asian-centric tropes</q> in styling the <q>outrageously outfitted personas</q> of Hsu's character, villain Jobu Tupaki, to whom Kurata has said she relates. Jobu Tupaki's many looks in the film include <q>Golfer Jobu</q> who wears a pink argyle vest and socks, exemplifying <q>the perfect Asian daughter who excels at sports and everything else in her life</q> according to Kurata. <q>Elvis Jobu</q>, on the other hand, wearing an Elvis costume with pink hair and a cigarette, signals that she is antagonizing her mother. Another is <q>Goth Jobu</q>, who wears an <q>all-black and a vinyl A-line miniskirt over a sheer tulle petticoat</q>, which The Hollywood Reporter notes is <q>a twist on anime cosplay's Victorian doll-inspired Elegant Gothic Lolita.</q> Yet another look is <q>Jobu K-Pop Star</q>, influenced by K-pop and Harajuku street style.
       </p>
       <figure>
         <a href="images/jobu_topaki2-lg.png" target="_blank"><img src="images/jobu_topaki2-thumb.png"
             alt="Jobu Topaki wearing a colorful hoodie with teddy bears attached to shoulders"></a>
-        <figcaption> A troubled Jobu Topaki wearing a colorful hoodie with teddy bears attached to shoulders</figcaption>
+        <figcaption> A troubled Jobu Topaki wearing a colorful hoodie with teddy bears attached to shoulders - https://villains.fandom.com/wiki/Jobu_Tupaki/Gallery</figcaption>
       </figure>
       <p>CBS News said the film's <q>gravitas</q> would not have been possible <q>without the creative vision behind the film's amazing (and often universe-defying) costumes - Shirley Kurata</q>. Insider observed that the film's costumes were <q>more than just clothes</q>, since they convey <q>different iterations of each character</q> and <q>[place] the viewer in the numerous multiverses traversed throughout the film.</q></p>
     </section>
