Added contact-us.html and success.html pages with matching nav, header, footer.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
 
   <nav class="nav">
-    <a href="index.html">Home</a> | <a href="faq.html">Frequently Asked Questions</a>
+    <a href="index.html">Home</a> | <a href="faq.html">Frequently Asked Questions</a> | <a href="contact-us.html">Contact Us</a>
   </nav>
 
   <ul class="ul">
