Added the following form fields to contact-us.html: single-line text, multi-line text, radio buttons, check boxes, pull-down menu. Submit and reset buttons were also added to contact-us.html.

--- a/success.html
+++ b/success.html
@@ -25,8 +25,7 @@
             <p>We have received your request.  Thank you for your interest.
             </p>
             <img src="images/success-checkmark-ribbon-yellow.png" alt="yellow ribbon with checkmark in middle"></img>
-            <p>Please allow at least 3 business days for a response since we maintain this site as a passion project
-                outside of our full-time jobs.</p>
+            <p> Note: Please allow at least 3 business days for a response from us.</p>
         </section>
 
     </main>
