--- a/contact-us.html
+++ b/contact-us.html
@@ -25,7 +25,7 @@
         </p>
     </section>
 
-    <form name="myMailerForm" id="myMailerForm" action="mailto:cican42814@gmail.com" method="post" class="form">
+    <form id="myMailerForm" action="mailto:cican42814@gmail.com" method="post" class="form">
       <fieldset>
         <legend> Contact Us By Submitting This Form</legend>
           <p><label for="firstname"> First Name </label> 
@@ -304,7 +304,7 @@
           <p><textarea name="inquiry" id="inquiry" rows="4" cols="50">  
           </textarea></p>
 
-          <p><form action="success.html"><input type="submit" id="submit"value="Submit" class="submit"></form></p>
+          <p><input type="submit" id="submit"value="Submit" class="submit"></p>
           <p><input type="reset" id="reset" value="Clear Form" class="reset"></p>
       
     </fieldset>
