Clicking Submit button now navigates to the success.html page

--- a/contact-us.html
+++ b/contact-us.html
@@ -304,7 +304,9 @@
           <p><textarea name="inquiry" id="inquiry" rows="4" cols="50">  
           </textarea></p>
 
-          <p><input type="submit" id="submit"value="Submit" class="submit"></p>
+          <a href="success.html"><button type="button" id="submit"value="Submit" class="submit">Submit</button></a>
+          <!--When using <input type="submit", the form goes to mail client which Dallas College restricts the adding of an email to this mail client.  From what I understand, php is necessary for action="mailto:" to work-->
+          
           <p><input type="reset" id="reset" value="Clear Form" class="reset"></p>
       
     </fieldset>
