Centered content on success.html. Added another fieldset to form on contact-us.html. Used CSS to style <legend>.

--- a/success.html
+++ b/success.html
@@ -20,7 +20,7 @@
             href="contact-us.html">Contact Us</a>
     </nav>
     <main class="main">
-        <section id="Success">
+        <section id="Success" class="success">
             <h2>Success!</h2>
             <p>We have received your request.  Thank you for your interest.
             </p>
