--- a/contact-us.html
+++ b/contact-us.html
@@ -27,7 +27,7 @@
 
     <form id="myMailerForm" action="mailto:cican42814@gmail.com" method="post" class="form">
       <fieldset>
-        <legend> Contact Us By Submitting This Form</legend>
+        <legend> Your Personal Information</legend>
           <p><label for="firstname"> First Name </label> 
           <p><input type="text" name="firstname" id="firstname"></p>
           <p><label for="lastname"> Last Name </label></p>
@@ -36,7 +36,7 @@
           <p><input type="email" name="email" id="email"></p>
           <p><label for="country"> Country/Region </label></p>
           <select name="country" id="country">
-              <option value="" selected disabled>Select a country</option>
+              <option value="" selected disabled>Select a Country</option>
               <option value="Afghanistan">Afghanistan</option>
               <option value="Åland Islands">Åland Islands</option>
               <option value="Albania">Albania</option>
@@ -292,7 +292,10 @@
           <p><input type="radio" name="role" id="faculty" value="Faculty"><label for="faculty"> Faculty </label></p>
           <p><input type="radio" name="role" id="parent" value="Parent"><label for="faculty"> Parent/Legal Guardian of Student </label></p>
           </p>
+        </fieldset>
 
+        <fieldset>
+          <legend>Your Interests and Inquiry</legend>
           <p><label for="interest"> Items That Interested You on Our Site </label></p>
           <p><input type="checkbox" name="interest" id="daniels2" value="The Daniels"><label for="daniels2"> The Daniels </label></p>
           <p><input type="checkbox" name="interest" id="movie2" value="Movie"><label for="movie2"> Their Movie </label></p>
