Corrected errors seen in HTML checker

--- a/contact-us.html
+++ b/contact-us.html
@@ -286,17 +286,16 @@
           <p><label for="school"> School Name </label></p>
           <p><input type="text" name="school" id="school"></p>
 
-          <p><label for="role"> Role in School </label></p>
+          <p><label> Role in School </label></p>
           <p><input type="radio" name="role" id="student" value="Student"><label for="student"> Student </label></p>
           <p><input type="radio" name="role" id="staff" value="Staff"><label for="staff"> Staff </label></p>
           <p><input type="radio" name="role" id="faculty" value="Faculty"><label for="faculty"> Faculty </label></p>
           <p><input type="radio" name="role" id="parent" value="Parent"><label for="faculty"> Parent/Legal Guardian of Student </label></p>
-          </p>
         </fieldset>
 
         <fieldset>
           <legend>Your Interests and Inquiry</legend>
-          <p><label for="interest"> Items That Interested You on Our Site </label></p>
+          <p><label> Items That Interested You on Our Site </label></p>
           <p><input type="checkbox" name="interest" id="daniels2" value="The Daniels"><label for="daniels2"> The Daniels </label></p>
           <p><input type="checkbox" name="interest" id="movie2" value="Movie"><label for="movie2"> Their Movie </label></p>
           <p><input type="checkbox" name="interest" id="physics2" value="Physics"><label for="physics2"> Physics </label></p>
@@ -307,7 +306,7 @@
           <p><textarea name="inquiry" id="inquiry" rows="4" cols="50">  
           </textarea></p>
 
-          <a href="success.html"><button type="button" id="submit"value="Submit" class="submit">Submit</button></a>
+          <a href="success.html"><button type="button" id="submit" value="Submit" class="submit">Submit</button></a>
           <!--When using <input type="submit", the form goes to mail client which Dallas College restricts the adding of an email to this mail client.  From what I understand, php is necessary for action="mailto:" to work-->
           
           <p><input type="reset" id="reset" value="Clear Form" class="reset"></p>
@@ -316,8 +315,7 @@
   </form>
 
     <p>Note: Please allow at least 3 business days for a response form us.</p>
-    </section>
-
+ 
 </main>
 
 <footer class="footer">
