--- a/contact-us.html
+++ b/contact-us.html
@@ -286,16 +286,16 @@
           <p><label for="school"> School Name </label></p>
           <p><input type="text" name="school" id="school"></p>
 
-          <p><label> Role in School </label></p>
+          <p> Role in School </p>
           <p><input type="radio" name="role" id="student" value="Student"><label for="student"> Student </label></p>
           <p><input type="radio" name="role" id="staff" value="Staff"><label for="staff"> Staff </label></p>
           <p><input type="radio" name="role" id="faculty" value="Faculty"><label for="faculty"> Faculty </label></p>
-          <p><input type="radio" name="role" id="parent" value="Parent"><label for="faculty"> Parent/Legal Guardian of Student </label></p>
+          <p><input type="radio" name="role" id="parent" value="Parent"><label for="parent"> Parent/Legal Guardian of Student </label></p>
         </fieldset>
 
         <fieldset>
           <legend>Your Interests and Inquiry</legend>
-          <p><label> Items That Interested You on Our Site </label></p>
+          <p> Items That Interested You on Our Site </p>
           <p><input type="checkbox" name="interest" id="daniels2" value="The Daniels"><label for="daniels2"> The Daniels </label></p>
           <p><input type="checkbox" name="interest" id="movie2" value="Movie"><label for="movie2"> Their Movie </label></p>
           <p><input type="checkbox" name="interest" id="physics2" value="Physics"><label for="physics2"> Physics </label></p>
