--- a/success.html
+++ b/success.html
@@ -24,7 +24,7 @@
             <h2>Success!</h2>
             <p>We have received your request.  Thank you for your interest.
             </p>
-            <img src="images/success-checkmark-ribbon-yellow.png" alt="yellow ribbon with checkmark in middle"></img>
+            <img src="images/success-checkmark-ribbon-yellow.png" alt="yellow ribbon with checkmark in middle">
             <p> Note: Please allow at least 3 business days for a response from us.</p>
         </section>
 
