Changed tag from section to article.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </ul>
 
   <main class="main">
-    <section id="Daniels">
+    <article id="Daniels">
       <h2>The Daniels</h2>
       <figure>
         <a href="images/daniel_scheinert_and_daniel_kwan-lg.jpg" target="_blank"><img src="images/daniel_scheinert_and_daniel_kwan-thumb.jpg" alt="Interview with Daniel Scheinert and Daniel Kwan"></a>
@@ -37,8 +37,8 @@
       </figure>
       <p>Filmmakers Daniel Kwan and Daniel Scheinert, collectively known as Daniels, met while studying at Emerson College in Boston and began collaborating on various projects. Their breakthrough came with their short film <q>Interesting Ball</q> (2008), which gained viral attention online. It showcased their quirky humor and distinctive visual style, setting the tone for their future work.</p>
       <p>Their unique approach to filmmaking has earned them a dedicated fanbase and critical acclaim within the industry, solidifying their reputation as innovative and boundary-pushing directors.</p>
-    </section>
-    <section id="Movie">
+    </article>
+    <article id="Movie">
       <h3>Their Movie</h3>
       <figure>
         <a href="images/film-lg.jpg" target="_blank"><img src="images/film-thumb.jpg"
@@ -46,8 +46,8 @@
         <figcaption>Everything Everywhere All at Once - the movie</figcaption>
       </figure>
       <p>The movie, <q>Everything Everywhere All At Once</q>, was a spectacular display of physics, mathematics, and art. Sharing about this movie, is me sharing about subjects that interest me.</p>
-    </section>
-    <section id="Physics">
+    </article>
+    <article id="Physics">
       <h3>Physics</h3>
       <figure>
         <a href="images/parallelunis-lg.jpg" target="_blank"><img src="images/parallelunis-thumb.jpg"
@@ -55,8 +55,8 @@
         <figcaption>A representation of a multiverse</figcaption>
       </figure>
       <p>Physicists Max Tegmark and Brian Greene have proposed different classification schemes for multiverses and universes. Tegmark's four-level classification consists of Level I: an extension of our universe, Level II: universes with different physical constants, Level III: many-worlds interpretation of quantum mechanics, and Level IV: ultimate ensemble. Brian Greene's nine types of multiverses include quilted, inflationary, brane, cyclic, landscape, quantum, holographic, simulated, and ultimate. The ideas explore various dimensions of space, physical laws, and mathematical structures to explain the existence and interactions of multiple universes. Some other multiverse concepts include twin-world models, cyclic theories, M-theory, and black-hole cosmology.</p>
-    </section>
-    <section id="Mathematics">
+    </article>
+    <article id="Mathematics">
       <h3>Mathematics</h3>
       <figure>
         <a href="images/math-lg.png" target="_blank"><img src="images/math-thumb.png"
@@ -66,8 +66,8 @@
       <p>The subject of infinity and infinite universes, known as the multiverse, was presented in an intense yet whimsical way. Expressing the concept of infinity entertainment injects excitement into the subject matter, triggering in interest in a wider audience.</p>
       <p>The multi-step process for multiverse jumping (also known as verse jumping) introduces the concept of algorithms. Algorithms are used in solving problems in mathematics and logic.</p>
       <p>The use of charts in quantifying levels of skill for each version of a character involves presenting numbers in a graphical way.</p>
-    </section>
-    <section id="Art">
+    </article>
+    <article id="Art">
       <h3>Art</h3>
       <figure>
         <a href="images/shirley_kurata2-lg.png" target="_blank" ><img src="images/shirley_kurata2-thumb.png"
@@ -92,8 +92,8 @@
         <figcaption> A troubled Jobu Topaki wearing a colorful hoodie with teddy bears attached to shoulders - https://villains.fandom.com/wiki/Jobu_Tupaki/Gallery</figcaption>
       </figure>
       <p>CBS News said the film's <q>gravitas</q> would not have been possible <q>without the creative vision behind the film's amazing (and often universe-defying) costumes - Shirley Kurata</q>. Insider observed that the film's costumes were <q>more than just clothes</q>, since they convey <q>different iterations of each character</q> and <q>[place] the viewer in the numerous multiverses traversed throughout the film.</q></p>
-    </section>
-    <section id="Me">
+    </article>
+    <article id="Me">
       <h2>Me</h2>
       <figure>
         <a href="images/robot_at_computer-lg.png" target="_blank" ><img src="images/robot_at_computer-thumb.png"
@@ -109,7 +109,7 @@
         <li>How to begin using ChatGPT</li>
       </ul>
       <p>This course assists in expanding my knowledge and skill set in the world of IT.</p>
-    </section>
+    </article>
 
   </main>
 
