--- a/faq.html
+++ b/faq.html
@@ -12,6 +12,8 @@
 
   <body class="body">
     <header class="header">
+      <a href="index.html" target="_self"><img class="logo2" src="images/logo4-resized.png"
+      alt="site logo with two Earths separated by an explosive flash with the initials for the site"></a>
       <h1>The Daniels - Their Film and Me</h1>
     </header>
   
@@ -19,10 +21,13 @@
       <a href="index.html">Home</a> | <a href="faq.html">Frequently Asked Questions</a> | <a href="contact-us.html">Contact Us</a>
     </nav>
 
+    <aside class="aside">
     <ul class="ul">
       <li><a href="#FAQ">Frequently Asked Questions</a></li>
       <li><a href="#NewsEvents">News and Events</a></li>
     </ul>
+    </aside>
+    
     <main>
       <section id="FAQ">
       <h2>Frequently Asked Questions</h2>
