--- a/success.html
+++ b/success.html
@@ -12,6 +12,8 @@
 
 <body class="body"> <!--This is how to make the whole webpage black-->
     <header class="header">
+        <a href="index.html" target="_self"><img class="logo" src="images/logo4-resized.png"
+        alt="site logo with two Earths separated by an explosive flash with the initials for the site"></a>
         <h1>The Daniels - Their Film and Me</h1>
     </header>
 
