Logo, nav bar, and content list (aside) stays at top of page while scrolling on index.html.

--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
   </head>
 
   <body class="body">
-    <header class="header">
+    <header class="header2">
       <a href="index.html" target="_self"><img class="logo2" src="images/logo4-resized.png"
       alt="site logo with two Earths separated by an explosive flash with the initials for the site"></a>
       <h1>The Daniels - Their Film and Me</h1>
@@ -124,7 +124,7 @@
     </main>
   
     <footer class="footer">
-    <pre class="pre">
+    <pre class="pre1">
     <strong>News and Events</strong>
     <a href="https://www.theartnewspaper.com/" target="_blank">The Art Newspaper</a>
 
