--- a/success.html
+++ b/success.html
@@ -33,7 +33,7 @@
     </main>
 
     <footer class="footer">
-        <pre class="pre">
+        <pre class="pre1">
 <strong>News and Events</strong>
 <a href="https://www.theartnewspaper.com/">The Art Newspaper</a>
 
