Fixed major issues with stylesheets

--- a/contact-us.html
+++ b/contact-us.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>The Daniels - Their Film and Me</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/layout.css">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="apple-icon.png">
 
@@ -320,7 +321,7 @@
 </main>
 
 <footer class="footer">
-    <pre class="pre">
+    <pre class="pre1">
 <strong>News and Events</strong>
 <a href="https://www.theartnewspaper.com/">The Art Newspaper</a>
 
