--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body class="body"> <!--This is how to make the whole webpage black-->
 
-  <header class="header2">
-    <a href="index.html" target="_self"><img class="logo2" src="images/logo4-resized.png"
+  <header class="header">
+    <a href="index.html" target="_self"><img class="logo" src="images/logo4-resized.png"
     alt="site logo with two Earths separated by an explosive flash with the initials for the site"></a>
     <h1>The Daniels - Their Film and Me</h1>
   </header>
@@ -87,7 +87,7 @@
       </p></span>
       <figure class="jobufur-fig">
       <a href="images/jobu_topaki-lg.png" target="_blank"><img src="images/jobu_topaki-thumb.png"
-            alt="Jobu Topaki in blue outfit holding a bottle of organic kethchup"></a>
+      alt="Jobu Topaki in blue outfit holding a bottle of organic kethchup"></a>
       <figcaption class="figcaption">Jobu Topaki playfully wearing a furry jacket with silver gloves - https://villains.fandom.com/wiki/Jobu<pre class="pre2">_Tupaki/Gallery</pre></figcaption>
       </figure>
     <span class="span"><p>According to The Hollywood Reporter, Kurata <q>subverted and reclaimed Asian-centric tropes</q> in styling the <q>outrageously outfitted personas</q> of Hsu's character, villain Jobu Tupaki, to whom Kurata has said she relates. Jobu Tupaki's many looks in the film include <q>Golfer Jobu</q> who wears a pink argyle vest and socks, exemplifying <q>the perfect Asian daughter who excels at sports and everything else in her life</q> according to Kurata. <q>Elvis Jobu</q>, on the other hand, wearing an Elvis costume with pink hair and a cigarette, signals that she is antagonizing her mother. Another is <q>Goth Jobu</q>, who wears an <q>all-black and a vinyl A-line miniskirt over a sheer tulle petticoat</q>, which The Hollywood Reporter notes is <q>a twist on anime cosplay's Victorian doll-inspired Elegant Gothic Lolita.</q> Yet another look is <q>Jobu K-Pop Star</q>, influenced by K-pop and Harajuku street style.
