--- a/success.html
+++ b/success.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>The Daniels - Their Film and Me</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/layout.css">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="apple-icon.png">
 
@@ -21,7 +22,7 @@
         <a href="index.html">Home</a> | <a href="faq.html">Frequently Asked Questions</a> | <a
             href="contact-us.html">Contact Us</a>
     </nav>
-    <main class="main">
+    <main>
         <section id="Success" class="success">
             <h2>Success!</h2>
             <p>We have received your request.  Thank you for your interest.
