--- a/faq.html
+++ b/faq.html
@@ -6,13 +6,14 @@
     <title>The Daniels - Their Film and Me</title>
     <link rel="stylesheet" href="css/table.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/layout.css">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="apple-icon.png">
   </head>
 
-  <body class="body">
-    <header class="header2">
-      <a href="index.html" target="_self"><img class="logo2" src="images/logo4-resized.png"
+  <body class="body" class="body-layout">
+    <header class="header">
+      <a href="index.html" target="_self"><img class="logo" src="images/logo4-resized.png"
       alt="site logo with two Earths separated by an explosive flash with the initials for the site"></a>
       <h1>The Daniels - Their Film and Me</h1>
     </header>
@@ -28,7 +29,7 @@
     </ul>
     </aside>
     
-    <main>
+    <main class="main">
       <section id="FAQ">
       <h2>Frequently Asked Questions</h2>
       <h3>How often is this site updated?</h3>
