--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" href="apple-icon.png">
   </head>
 
-  <body class="body" class="body-layout">
+  <body class="body">
     <header class="header">
       <a href="index.html" target="_self"><img class="logo" src="images/logo4-resized.png"
       alt="site logo with two Earths separated by an explosive flash with the initials for the site"></a>
