Corrected error with a quote

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <figcaption class="figcaption">Everything Everywhere All at Once - the movie</figcaption>
       </figure>
       <h4>Worthy of Your Time and Dime</h4>
-      <section class="section"><p>In the past, spending money to go to the <p>dollar show</q> to see movies that were released much earlier in the year was worth it. With the obselence of the <q>dollar show</q> plus the rising costs of movie tickets and refreshments, a small fortune is now required to take the family to see a film at the neigborhood movie theater. Few movies are worth the expense, but <q>Everything Everywhere All At Once</q> was so non-conventional that it was widely considered worthy of the splurge. It was a spectacular display of physics, mathematics, and art. Sharing about this movie, is me sharing about subjects that interest me.</p></section>
+      <section class="section"><p>In the past, spending money to go to the <q>dollar show</q> to see movies that were released much earlier in the year was worth it. With the obselence of the <q>dollar show</q> plus the rising costs of movie tickets and refreshments, a small fortune is now required to take the family to see a film at the neigborhood movie theater. Few movies are worth the expense, but <q>Everything Everywhere All At Once</q> was so non-conventional that it was widely considered worthy of the splurge. It was a spectacular display of physics, mathematics, and art. Sharing about this movie, is me sharing about subjects that interest me.</p></section>
     </article>
 
     <article id="Physics" class="article">
