Incorporated the rest of Herd's code into the navigation bar. Changed header from position: sticky to position: relative.

--- a/faq.html
+++ b/faq.html
@@ -18,9 +18,11 @@
       <h1>The Daniels - Their Film and Me</h1>
     </header>
   
-    <nav class="nav">
-      <a href="index.html">Home</a> | <a href="faq.html">Frequently Asked Questions</a> | <a href="contact-us.html">Contact Us</a>
-    </nav>
+  <nav class="nav">
+    <a class="active" href="index.html">Home</a>
+    <a href="faq.html">Frequently Asked Questions</a>
+    <a href="contact-us.html">Contact Us</a>
+  </nav>
 
     <aside class="aside">
     <ul class="ul">
