--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   </header>
 
   <nav class="nav">
-    <a href="index.html">Home</a> | <a href="faq.html">Frequently Asked Questions</a> | <a href="contact-us.html">Contact Us</a>
+    <a class="active" href="index.html">Home</a> 
+    <a href="faq.html">Frequently Asked Questions</a>
+    <a href="contact-us.html">Contact Us</a>
   </nav>
 
   <aside class="aside">
