--- a/contact-us.html
+++ b/contact-us.html
@@ -18,9 +18,12 @@
         <h1>The Daniels - Their Film and Me</h1>
     </header>
 
-    <nav class="nav">
-        <a href="index.html">Home</a> | <a href="faq.html">Frequently Asked Questions</a> | <a href="contact-us.html">Contact Us</a>
-    </nav>
+<nav class="nav">
+    <a class="active" href="index.html">Home</a>
+    <a href="faq.html">Frequently Asked Questions</a>
+    <a href="contact-us.html">Contact Us</a>
+</nav>
+
 <main class="main">
     <section id="Contact-Us">
         <h2>Contact Us</h2>
