Put team.html into correct folder.

--- a/team.html
+++ b/team.html
@@ -16,8 +16,6 @@
     <h1>The Daniels - Their Film and Me</h1>
   </header>
 
-  <main class="main">
-
     <section>
       <h2>What We Do</h2>
       <p>Synergistically building sites and software that inform, inspire, and increase productivity is our focus.
@@ -64,7 +62,7 @@
       <h3>Hash Tag</h3>
       <h4>Operations Manager</h4>
         <figure>
-          <img src="images/humanform-lg" alt="hypnotic human figure facing forward with red eyes">
+          <img src="images/humanform2-lg.png" alt="hypnotic human figure facing forward with red eyes">
             <figcaption>Hash dematerializing at the end of a long day's work.</figcaption>
         </figure>
         <p>Orchestrates funding from private donors with finesse.
@@ -82,8 +80,7 @@
           </ul>
       </p>
     </section>
-  
-  </main>
+
 
 
 
