Created Sign In button put nav links into unordered list set images to set mx width and height

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
   </header>
 
   <nav class="nav">
-    <a class="active" href="index.html">Home</a> 
+    <a href="index.html">Home</a> 
     <a href="faq.html">Frequently Asked Questions</a>
     <a href="contact-us.html">Contact Us</a>
+    <a href="team.html">Meet Our Team</a>
   </nav>
 
   <aside class="aside">
