--- a/team.html
+++ b/team.html
@@ -10,26 +10,41 @@
     <link rel="apple-touch-icon" href="apple-icon.png">
 </head>
 
-<body class="body"> <!--This is how to make the whole webpage black-->
-  <header class="header">
+<body class="body-team"> <!--This is how to make the whole webpage black-->
+  <header class="header-team">
     <a href="index.html" target="_self"><img class="logo" src="images/logo4-resized.png" alt="site logo with two Earths separated by an explosive flash with the intitials for the site"></a>
     <h1>The Daniels - Their Film and Me</h1>
   </header>
 
-    <section>
+  <main class="flex-p-main">
+
+      <nav class="flex-p-nav">
+        <ul class="flex-c-nav">
+          <li class="flex-c-nav"><a href="index.html">Home</a></li>
+          <li class="flex-c-nav"><a href="faq.html">Frequently Asked Questions</a></li>
+          <li class="flex-c-nav"><a href="contact-us.html">Contact Us</a></li>
+          <li class="flex-c-nav"><a href="team.html">Meet Our Team</a></li>
+        </ul>
+      </nav>
+      <!-- In order to create items within a flexbox, each item must be placed in its own container (header, article, section,etc. For these nav links, it would be easier to use the unordered list items which creates a container for each item with <li> -->
+  
+    <section >
       <h2>What We Do</h2>
-      <p>Synergistically building sites and software that inform, inspire, and increase productivity is our focus.
-      We leveraged the latest resources and technology to develop our site.
-      Creative energy flows freely amongst us, providing eccentric experiences to our clientele.</p>
+      <p>Synergistically building sites and software that inform, inspire, and increase productivity is our focus.</p>
+      <p>We leveraged the latest resources and technology to develop our site.</p>
+      <p>Creative energy flows freely amongst us, providing eccentric experiences to our clientele.</p>
     </section>
 
-      <h2>Meet Our Team</h2>
-  
-    <section>
+        <section>
+          <h2>Meet Our Team</h2>
+        </section>
+    
+
+    <section class="flex-section1">
       <h3>Ellip Sis</h3>
       <h4>Software Development Manager</h4>
         <figure>
-          <img src="images/humanoid-lg.png" alt="humanoid staring at ground">
+          <img src="images/humanoid-ti.png" alt="humanoid staring at ground" class="flex-img1">
           <figcaption>Ellip at what is left of Yellowstone National Park</figcaption>
         </figure>
         <p>Skillfully builds the skeleton of our site with HTML (HyperText Markup Language) and fills its organs with content.
@@ -38,11 +53,11 @@
         desktop screens.</p>
     </section>
 
-    <section>
+    <section class="flex-section2">
       <h3>Semi Colon</h3>
       <h4>Communications Manager</h4>
         <figure>
-          <img src="images/humanform-lg.png" alt="human form facing forward">
+          <img src="images/humanform-ti.png" alt="human form facing forward" class="flex-img2">
             <figcaption>Semi's third mugshot</figcaption>
         </figure>
         <p>Finds an eclectic array of content to share with the world... and beyond.
@@ -58,11 +73,11 @@
         </p>
     </section>
 
-    <section>
+    <section class="flex-section3">
       <h3>Hash Tag</h3>
       <h4>Operations Manager</h4>
         <figure>
-          <img src="images/humanform2-lg.png" alt="hypnotic human figure facing forward with red eyes">
+          <img src="images/humanform2-ti.png" alt="hypnotic human figure facing forward with red eyes" class="flex-img3">
             <figcaption>Hash dematerializing at the end of a long day's work.</figcaption>
         </figure>
         <p>Orchestrates funding from private donors with finesse.
@@ -80,6 +95,9 @@
           </ul>
       </p>
     </section>
+
+  <button class="sign-in-team">Sign In</button>
+  </main>
 
 
 
