Removed content to make more space for element movement. Added footer with flexbox layout.

--- a/team.html
+++ b/team.html
@@ -16,8 +16,12 @@
     <h1>The Daniels - Their Film and Me</h1>
   </header>
 
-  <main class="flex-p-main">
+  <main >
+        <section>
+          <h2 class="meet-team">Meet Our Team</h2>
+        </section>
 
+      <article class="flex-p-article">
       <nav class="flex-p-nav">
         <ul class="flex-c-nav">
           <li class="flex-c-nav"><a href="index.html">Home</a></li>
@@ -28,18 +32,6 @@
       </nav>
       <!-- In order to create items within a flexbox, each item must be placed in its own container (header, article, section,etc. For these nav links, it would be easier to use the unordered list items which creates a container for each item with <li> -->
   
-    <section >
-      <h2>What We Do</h2>
-      <p>Synergistically building sites and software that inform, inspire, and increase productivity is our focus.</p>
-      <p>We leveraged the latest resources and technology to develop our site.</p>
-      <p>Creative energy flows freely amongst us, providing eccentric experiences to our clientele.</p>
-    </section>
-
-        <section>
-          <h2>Meet Our Team</h2>
-        </section>
-    
-
     <section class="flex-section1">
       <h3>Ellip Sis</h3>
       <h4>Software Development Manager</h4>
@@ -95,11 +87,39 @@
           </ul>
       </p>
     </section>
-
+ 
   <button class="sign-in-team">Sign In</button>
+
+  </article>
   </main>
 
+  <footer class="flex-p-footer">
+    <section>
+   <pre>
+   <p>&nbsp;&nbsp;&nbsp;&nbsp; &copy 2024</p>
+   <strong>Webmaster for The Daniels - Their Film and Me Site</strong>
+   <a href="mailto:cican42814@gmail.com">Email Webmaster</a>
+   </pre>
+    </section>
 
+    <section class="flex-footer1">
+      <pre>
+      <strong>News and Events</strong>
+      <a href="https://www.theartnewspaper.com/">The Art Newspaper</a>
+      </pre>
+    </section>
+
+    <section>
+        <nav class="flex-p-nav">
+          <ul class="flex-c-nav">
+            <li class="flex-c-nav"><a href="index.html">Home</a></li>
+            <li class="flex-c-nav"><a href="faq.html">Frequently Asked Questions</a></li>
+            <li class="flex-c-nav"><a href="contact-us.html">Contact Us</a></li>
+            <li class="flex-c-nav"><a href="team.html">Meet Our Team</a></li>
+          </ul>
+        </nav>
+    </section>
+  </footer>
 
 
 
