Removed more content to make more space for element movement.

--- a/team.html
+++ b/team.html
@@ -11,12 +11,12 @@
 </head>
 
 <body class="body-team"> <!--This is how to make the whole webpage black-->
-  <header class="header-team">
+  <header class="header">
     <a href="index.html" target="_self"><img class="logo" src="images/logo4-resized.png" alt="site logo with two Earths separated by an explosive flash with the intitials for the site"></a>
     <h1>The Daniels - Their Film and Me</h1>
   </header>
 
-  <main >
+  <main>
         <section>
           <h2 class="meet-team">Meet Our Team</h2>
         </section>
@@ -39,10 +39,9 @@
           <img src="images/humanoid-ti.png" alt="humanoid staring at ground" class="flex-img1">
           <figcaption>Ellip at what is left of Yellowstone National Park</figcaption>
         </figure>
-        <p>Skillfully builds the skeleton of our site with HTML (HyperText Markup Language) and fills its organs with content.
-        Produces a pleasing overlay for the body of work via general CSS (Cascading Style Sheets) and CSS Box Model programming.
-        Utilizes CSS Flexbox so our audiences enjoy the responsiveness experienced while viewing our content on mobile to
-        desktop screens.</p>
+        <p>Skillfully builds the skeleton of our site with HTML (HyperText Markup Language).
+        Produces a pleasing effects via general CSS (Cascading Style Sheets) and CSS Box Model.
+        Utilizes CSS Flexbox so our audiences enjoy responsive web design.</p>
     </section>
 
     <section class="flex-section2">
@@ -56,12 +55,6 @@
         Utilizes current events in education, entertainment, and world affairs as seeds of creation.
         Captures stunning images via artificial intelligent software and/or classic photography, appeasing our audience's taste
         for hallucinatory visuals.
-        Referring who need additional inspiration and resources to the sites below:
-          <ul>
-            <li><a href="https://pixabay.com/images/search/dimensions/">Pixabay</a></li>
-            <li><a href="https://www.freepik.com/">Freepik</a></li>
-            <li><a href="https://www.wikipedia.org/">Wikipedia</a></li>
-          </ul>
         </p>
     </section>
 
@@ -76,16 +69,7 @@
         Strategically funds and finds additional support for our endeavors.
         Rallies the energies and ideas of those wanting to gain experience in IT services through the utilization of volunteer
         programs for youth and adults.
-        Refers those looking to excel in software development to the sites below:
-          <ul>
-            <li><a href="https://www.w3schools.com/">W3Schools</a></li>
-            <li><a href="https://www.freecodecamp.org/">freeCodeCamp</a></li>
-            <li><a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a></li>
-            <li><a href="https://developers.google.com/">Google for Developers</a></li>
-            <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">A Complete Guide to Flexbox</a></li>
-            <li><a href="https://flexboxfroggy.com/">Flexbox Froggy</a></li>
-          </ul>
-      </p>
+        </p>
     </section>
  
   <button class="sign-in-team">Sign In</button>
@@ -96,22 +80,24 @@
   <footer class="flex-p-footer">
     <section>
    <pre>
-   <p>&nbsp;&nbsp;&nbsp;&nbsp; &copy 2024</p>
-   <strong>Webmaster for The Daniels - Their Film and Me Site</strong>
+   
+   <strong class="footer-strong" >Webmaster for The Daniels - Their Film and Me Site</strong>
    <a href="mailto:cican42814@gmail.com">Email Webmaster</a>
+   <p>&nbsp;&nbsp;&nbsp;&nbsp; &copy 2024</p>
    </pre>
     </section>
 
-    <section class="flex-footer1">
+    <section class="flex-footer2">
       <pre>
-      <strong>News and Events</strong>
+
+      <strong class="footer-strong">News and Events</strong>
       <a href="https://www.theartnewspaper.com/">The Art Newspaper</a>
       </pre>
     </section>
 
-    <section>
-        <nav class="flex-p-nav">
-          <ul class="flex-c-nav">
+    <section class="flex-footer3">
+        <nav class="flex-p-footer-nav">
+          <ul class="ul-flex-footer3">
             <li class="flex-c-nav"><a href="index.html">Home</a></li>
             <li class="flex-c-nav"><a href="faq.html">Frequently Asked Questions</a></li>
             <li class="flex-c-nav"><a href="contact-us.html">Contact Us</a></li>
