Applied all CSS Flexbox properties as per Lesson 8

--- a/team.html
+++ b/team.html
@@ -11,8 +11,8 @@
 </head>
 
 <body class="body-team"> <!--This is how to make the whole webpage black-->
-  <header class="header">
-    <a href="index.html" target="_self"><img class="logo" src="images/logo4-resized.png" alt="site logo with two Earths separated by an explosive flash with the intitials for the site"></a>
+  <header class="header-team">
+    <a href="index.html" target="_self"><img class="logo-team" src="images/logo4-resized.png" alt="site logo with two Earths separated by an explosive flash with the intitials for the site"></a>
     <h1>The Daniels - Their Film and Me</h1>
   </header>
 
@@ -41,7 +41,7 @@
         </figure>
         <p>Skillfully builds the skeleton of our site with HTML (HyperText Markup Language).
         Produces a pleasing effects via general CSS (Cascading Style Sheets) and CSS Box Model.
-        Utilizes CSS Flexbox so our audiences enjoy responsive web design.</p>
+        Utilizes CSS Flexbox so our audiences enjoy the benefits of responsive web design.</p>
     </section>
 
     <section class="flex-section2">
@@ -90,8 +90,9 @@
     <section class="flex-footer2">
       <pre>
 
-      <strong class="footer-strong">News and Events</strong>
-      <a href="https://www.theartnewspaper.com/">The Art Newspaper</a>
+      <strong class="footer-strong">Site Development Resources</strong>
+      <a href="https://www.w3schools.com/">W3Schools</a>
+      <a href="https://pixabay.com/images/search/dimensions/">Pixabay</a>
       </pre>
     </section>
 
